--- a/app/views/home/commits/_add_translation_modal.slim
+++ b/app/views/home/commits/_add_translation_modal.slim
@@ -3,7 +3,7 @@
     .modal.twelve.columns#add-translation
       a.close ×
       - projects = Project.git.order('LOWER(name) ASC')
-      - cur_project = cookies[:home_new_commit_project] ? cookies[:home_new_commit_project] : projects.first
+      - cur_project = cookies[:home_index_new_commit_project] ? cookies[:home_index_new_commit_project] : projects.first
       = form_for(Commit.new, url: project_commits_path(cur_project, format: 'json')) do |f|
         h2 Translation Request
         .modal-body
