--- a/app/views/home/_commit.slim
+++ b/app/views/home/_commit.slim
@@ -20,7 +20,7 @@ tr.row_class
       = form_for commit, url: project_commit_url(commit.project, commit, format: 'json') do |f|
         = f.text_field  :due_date, value: (f.object.due_date.strftime('%m/%d/%Y') if !f.object.due_date.nil?), class: 'datepicker'
     - elsif commit.due_date
-      span class="#{@home_presenter.due_date_class(commit)}" = l(commit.due_date, format: :mon_day_year)
+      span class="#{@home_index_presenter.due_date_class(commit)}" = l(commit.due_date, format: :mon_day_year)
 
   / Project Priority
   td.centered
@@ -40,16 +40,16 @@ tr.row_class
 
   / Project Description
   td class=('centered' if !commit.description)
-    div.description[data-full-description=@home_presenter.full_description(commit)
-      data-short-description=@home_presenter.short_description(commit)
+    div.description[data-full-description=@home_index_presenter.full_description(commit)
+      data-short-description=@home_index_presenter.short_description(commit)
       data-author=commit.author]
-      = @home_presenter.short_description(commit)
+      = @home_index_presenter.short_description(commit)
 
   - if current_user.translator?
     / Word Translation Count
-    td = "#{number_with_delimiter @home_presenter.commit_stat(commit, :translations, :new)}s (#{number_with_delimiter @home_presenter.commit_stat(commit, :words, :new)}w)"
+    td = "#{number_with_delimiter @home_index_presenter.commit_stat(commit, :translations, :new)}s (#{number_with_delimiter @home_index_presenter.commit_stat(commit, :words, :new)}w)"
     / Word Review Count
-    td = "#{number_with_delimiter @home_presenter.commit_stat(commit, :translations, :pending)}s (#{number_with_delimiter @home_presenter.commit_stat(commit, :words, :pending)}w)"
+    td = "#{number_with_delimiter @home_index_presenter.commit_stat(commit, :translations, :pending)}s (#{number_with_delimiter @home_index_presenter.commit_stat(commit, :words, :pending)}w)"
   - else
     / Progress
     - if commit.loading?
@@ -62,7 +62,7 @@ tr.row_class
     - elsif commit.ready?
       td Ready for Download
     - else
-      - strings_remaining = @home_presenter.commit_stat(commit, :translations, :pending) + @home_presenter.commit_stat(commit, :translations, :new)
+      - strings_remaining = @home_index_presenter.commit_stat(commit, :translations, :pending) + @home_index_presenter.commit_stat(commit, :translations, :new)
       td = "Translating #{pluralize_with_delimiter strings_remaining, 'String'}"
 
   / Translation/Monitor Button
