--- a/app/views/locale/projects/show.slim
+++ b/app/views/locale/projects/show.slim
@@ -47,7 +47,7 @@ hr.divider
   .filter-bar
     form
       .main
-        .pull-right#expand-search
+        .pull-right.expand-search
           i.fa.fa-chevron-right
 
         input type="text" name="filter" placeholder="Substring"
