--- a/app/views/home/commits/_add_translation_modal.slim
+++ b/app/views/home/commits/_add_translation_modal.slim
@@ -1,6 +1,20 @@
-- if Project.count > 0
+/ Copyright 2014 Square Inc.
+/
+/    Licensed under the Apache License, Version 2.0 (the "License");
+/    you may not use this file except in compliance with the License.
+/    You may obtain a copy of the License at
+/
+/        http://www.apache.org/licenses/LICENSE-2.0
+/
+/    Unless required by applicable law or agreed to in writing, software
+/    distributed under the License is distributed on an "AS IS" BASIS,
+/    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+/    See the License for the specific language governing permissions and
+/    limitations under the License.
+
+- if Project.git.count > 0
   .row
-    .modal.twelve.columns#add-translation
+    .modal.twelve.columns#add-commit-translation
       a.close ×
       - projects = Project.git.order('LOWER(name) ASC')
       - cur_project = cookies[:home_index_new_commit_project] ? cookies[:home_index_new_commit_project] : projects.first
